--- a/index.html
+++ b/index.html
@@ -3,24 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vault-Tec Terminal</title>
+    <title>Site-86 Terminal</title>
     <style>
         body {
             background-color: black;
             color: green;
             font-family: 'Courier New', Courier, monospace;
-            font-size: 18px;
         }
         #terminal {
-            width: 80%;
-            margin: auto;
-            margin-top: 50px;
+            white-space: pre;
         }
         input {
             background-color: black;
             color: green;
             border: none;
-            font-family: inherit;
+            font-family: 'Courier New', Courier, monospace;
             font-size: inherit;
             outline: none;
         }
